--- a/Learn-CSS-Flexbox/style.css
+++ b/Learn-CSS-Flexbox/style.css
@@ -1,20 +1,5 @@
-/*#box-container {
-	height: 500px;
-	display: flex;
-}
-
-#box-1 {
-	background-color: dodgerblue;
-	width: 50%;
-	height: 50%;
-}
-
-#box-2 {
-	background-color: orangered;
-	width: 50%;
-	height: 50%;
-}
-
+/*
+*/
 ----------------||||||||||||||||||----------
 
   body {
@@ -22,6 +7,7 @@
   }
   header {
   	display: flex;
+    flex-direction: row;
   }
   header .profile-thumbnail {
     width: 50px;
@@ -31,6 +17,7 @@
   header .profile-name {
   	display: flex;
     margin-left: 10px;
+    flex-direction: column;
   }
   header .follow-btn {
   	display: flex;
@@ -56,6 +43,7 @@
   }
   footer {
   	display: flex;
+    flex-direction: row;
   }
   footer .stats {
   	display: flex;
@@ -74,4 +62,3 @@
     border: 0;
     background: transparent;
   }
-*/
